[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "47.0.0"
csv = "1.3.0"
ndarray = "0.15.6"
piston_window = "0.130.0"
plotters = "0.3.5"
egui = "*"
rand = "0.8"
